# NotesEggpoker

./: .gitignore  auto_note_rebuild.py  quartz.config.ts  quartz.layout.ts
py_env/: pyvenv.cfg
py_env/Scripts/: activate  activate.bat
quartz/: cfg.ts
quartz/components/: CommentSection.tsx  index.ts  renderPage.tsx
quartz/plugins/transformers/: comments.ts  index.ts
server/: auto_note_rebuild.py  main.py  pyproject.toml  run.bat
