[tool.poetry]
name = "notesserver"
version = "0.1.0"
description = ""
authors = ["Tongwei Dai <tongweid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
watchdog = "^5.0.3"
gunicorn = "^23.0.0"
waitress = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
